🎨 tailwind default setting.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,9 @@
 }
 
 body {
+  width: 375px;
+  height: 100vh;
+  margin: 0 auto;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -29,5 +32,11 @@ body {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+
+  .flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
