♻️ global css modify, constants file update, Home component apply.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@ body {
   width: 390px;
   height: 100vh;
   margin: 0 auto;
+  overflow: hidden;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
