⚒️ tailwind css update, global css font color change.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@ body {
   height: 100vh;
   margin: 0 auto;
   overflow: hidden;
-  color: rgb(var(--foreground-rgb));
+  color: #000;
   background: linear-gradient(
       to bottom,
       transparent,
