--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,9 +10,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 255, 255, 255;
-    --background-end-rgb: 255, 255, 255;
+    /* --foreground-rgb: 255, 255, 255; */
+    /* --background-start-rgb: 255, 255, 255; */
+    /* --background-end-rgb: 255, 255, 255; */
   }
 }
 
