--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,40 @@
   }
 }
 
+@font-face {
+  font-family: "Pretendard";
+  font-display: swap;
+  font-weight: 300;
+  src:
+    url("/assets/fonts/Pretendard-Light.woff2") format("woff2"),
+    url("/assets/fonts/Pretendard-Light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: swap;
+  font-weight: 500;
+  src:
+    url("/assets/fonts/Pretendard-Medium.woff2") format("woff2"),
+    url("/assets/fonts/Pretendard-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: swap;
+  font-weight: 700;
+  src:
+    url("/assets/fonts/Pretendard-Bold.woff2") format("woff2"),
+    url("/assets/fonts/Pretendard-Bold.woff") format("woff");
+}
+
 body {
   width: 390px;
   height: 100vh;
   margin: 0 auto;
   overflow: hidden;
   color: #000;
+  font-family: Pretendard, "system-ui", sans-serif;
   background: linear-gradient(
       to bottom,
       transparent,
