♻️ refactor: all pages refactor.. DetailInfo, Card component, loading Component, Review component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,3 +66,14 @@ body {
     align-items: center;
   }
 }
+
+/* Hide scrollbar for WebKit-based browsers (Chrome, Safari) */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
