--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@ body {
   overflow: hidden;
   color: #000;
   font-family: Pretendard, "system-ui", sans-serif;
-  background: #fff;
+  background: rgba(229, 229, 229, 0.4);
 }
 
 @layer utilities {
